clusters/homelab/infrastructure/authentik/postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-postgresql
  namespace: authentik
  labels:
    app: authentik-postgresql
    tags.datadoghq.com/env: homelab
    tags.datadoghq.com/service: authentik-postgres
spec:
  selector:
    app: authentik-postgresql
  ports:
  - name: postgresql
    port: 5432
    targetPort: 5432
  type: ClusterIP
