clusters/homelab/infrastructure/authentik/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-redis
  namespace: authentik
  labels:
    app: authentik-redis
    tags.datadoghq.com/env: homelab
    tags.datadoghq.com/service: authentik-redis
spec:
  selector:
    app: authentik-redis
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
  type: ClusterIP
