clusters/homelab/infrastructure/authentik/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik
  namespace: authentik
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: auth.tkuipers.ca
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - auth.tkuipers.ca
      secretName: authentik-tls
  rules:
    - host: auth.tkuipers.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: infrastructure-authentik-server
                port:
                  number: 80
